force-app/main/default/objects/OwnerShip__c/OwnerShip__c.object-meta.xml
<CustomObject>
    <label>OwnerShip</label>
    <nameField>
        <label>OwnerShip Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OwnerShips</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>