force-app/main/default/objects/OwnerShip__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>OwnerShips (Account Owner)</relationshipLabel>
    <relationshipName>OwnerShips_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>