force-app/main/default/objects/OwnerShip__c/fields/Advisor__c.field-meta.xml
<CustomField>
    <fullName>Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advisor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>OwnerShips (Advisor)</relationshipLabel>
    <relationshipName>OwnerShipsAdvisor</relationshipName>
    <type>Lookup</type>
</CustomField>