force-app/main/default/objects/OwnerShip__c/fields/CustomerID__c.field-meta.xml
<CustomField>
    <fullName>CustomerID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>OwnerShips</relationshipLabel>
    <relationshipName>OwnerShips</relationshipName>
    <type>Lookup</type>
</CustomField>