force-app/main/default/objects/OwnerShip__c/fields/DataType__c.field-meta.xml
<CustomField>
    <fullName>DataType__c</fullName>
    <label>DataType</label>
    <length>10</length>
    <type>Text</type>
</CustomField>