force-app/main/default/objects/OwnerShip__c/fields/Engine_no__c.field-meta.xml
<CustomField>
    <fullName>Engine_no__c</fullName>
    <label>Engine no</label>
    <length>20</length>
    <type>Text</type>
</CustomField>