force-app/main/default/objects/OwnerShip__c/fields/Frameno__c.field-meta.xml
<CustomField>
    <fullName>Frameno__c</fullName>
    <label>Frame no</label>
    <length>30</length>
    <type>Text</type>
</CustomField>