force-app/main/default/objects/OwnerShip__c/fields/Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order ID</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>OwnerShips</relationshipLabel>
    <relationshipName>OwnerShips_Order</relationshipName>
    <type>Lookup</type>
</CustomField>