force-app/main/default/objects/OwnerShip__c/fields/Order_ID_DMS__c.field-meta.xml
<CustomField>
    <fullName>Order_ID_DMS__c</fullName>
    <label>Order ID DMS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>