force-app/main/default/objects/OwnerShip__c/fields/Point__c.field-meta.xml
<CustomField>
    <fullName>Point__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Point</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>OwnerShips (Point)</relationshipLabel>
    <relationshipName>OwnerShips_Point</relationshipName>
    <type>Lookup</type>
</CustomField>