force-app/main/default/objects/OwnerShip__c/fields/Sales_date__c.field-meta.xml
<CustomField>
    <fullName>Sales_date__c</fullName>
    <label>Sales date</label>
    <type>Date</type>
</CustomField>