force-app/main/default/objects/OwnerShip__c/recordTypes/CRM.recordType-meta.xml
<RecordType>
    <fullName>CRM</fullName>
    <active>true</active>
    <description>BB dealer Hand-over a bike for  an MC Order in CRM</description>
    <label>CRM</label>
</RecordType>