force-app/main/default/objects/OwnerShip__c/recordTypes/DMS.recordType-meta.xml
<RecordType>
    <fullName>DMS</fullName>
    <active>true</active>
    <description>Sale sport bike MC (other dealer except BB dealer)</description>
    <label>DMS</label>
</RecordType>